<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
   android:background="@color/backGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/locationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_title"
        android:textSize="24sp"
        android:textColor="@color/lines"
        android:fontFamily="@font/get_schwifty"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/lines"
        app:layout_constraintBottom_toBottomOf="@id/locationsText"
        app:layout_constraintTop_toTopOf="@id/locationsText"
        app:layout_constraintStart_toEndOf="@id/locationsText"/>

    <View
        android:id="@+id/clickableFav"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@id/favCons"
        app:layout_constraintTop_toTopOf="@id/favCons"
        app:layout_constraintBottom_toBottomOf="@id/favCons"
        app:layout_constraintStart_toStartOf="@id/favCons"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favCons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/locationsText"
        android:background="@drawable/item_background"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_option_1"
            android:textColor="@color/lines"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/robotomono_bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />
        <TextView
            android:id="@+id/pilot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_option_1_desc"
            android:layout_marginStart="20dp"
            android:textColor="@color/lines"
            android:textSize="16sp"
            android:fontFamily="@font/robotomono_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/episode"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/ic_right_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginStart="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/clickableLang"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@id/changeLang"
        app:layout_constraintTop_toTopOf="@id/changeLang"
        app:layout_constraintBottom_toBottomOf="@id/changeLang"
        app:layout_constraintStart_toStartOf="@id/changeLang"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changeLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/favCons"
        android:background="@drawable/item_background"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/changeLangText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_option_2"
            android:textColor="@color/lines"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/robotomono_bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/changeLangDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_option_2_desc"
            android:layout_marginStart="20dp"
            android:textColor="@color/lines"
            android:textSize="16sp"
            android:fontFamily="@font/robotomono_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/changeLangText"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/ic_right"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/eng"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginStart="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/clickableMode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@id/changeMode"
        app:layout_constraintTop_toTopOf="@id/changeMode"
        app:layout_constraintBottom_toBottomOf="@id/changeMode"
        app:layout_constraintStart_toStartOf="@id/changeMode"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changeMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/changeLang"
        android:background="@drawable/item_background"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/changeModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_option_3"
            android:textColor="@color/lines"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/robotomono_bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/changeDarkModeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_option_3_desc"
            android:layout_marginStart="20dp"
            android:textColor="@color/lines"
            android:textSize="16sp"
            android:fontFamily="@font/robotomono_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/changeModeText"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Switch
            android:id="@+id/ic_right_darkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginStart="20dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>