<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bottomnavigation.locations.presentation.LocationsFragment">
    <TextView
        android:id="@+id/locationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Locations"
        android:textSize="24sp"
        android:textColor="@color/lines"
        android:fontFamily="@font/get_schwifty"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/lines"
        app:layout_constraintBottom_toBottomOf="@id/locationsText"
        app:layout_constraintTop_toTopOf="@id/locationsText"
        app:layout_constraintStart_toEndOf="@id/locationsText"/>
    <LinearLayout
        android:id="@+id/linear1"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:background="@drawable/text_background"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/locationsText"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/locationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_locations_picker_1"
            android:fontFamily="@font/robotomono_bold"
            android:textColor="@color/lines"
            android:textSize="16sp"
            android:gravity="start"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/valueText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
          android:fontFamily="@font/robotomono_light"
            android:textColor="@color/lines"
            android:textSize="14sp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/hamburgerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hamburger"
        android:layout_marginStart="8dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:background="@drawable/text_background"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/typeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_locations_picker_2"
            android:fontFamily="@font/robotomono_bold"
            android:textColor="@color/lines"
            android:textSize="16sp"
            android:gravity="start"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/typeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/robotomono_light"
            android:textColor="@color/lines"
            android:textSize="14sp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/typeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hamburger"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:background="@drawable/text_background"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear2"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/dimensionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_locations_picker_3"
            android:fontFamily="@font/robotomono_bold"
            android:textColor="@color/lines"
            android:textSize="16sp"
            android:gravity="start"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/dimensionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/robotomono_light"
            android:textColor="@color/lines"
            android:textSize="14sp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/dimensionIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hamburger"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:background="@drawable/text_background"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear3"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/createdText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_locations_picker_4"
            android:fontFamily="@font/robotomono_bold"
            android:textColor="@color/lines"
            android:textSize="16sp"
            android:gravity="start"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/createdValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/robotomono_light"
            android:textColor="@color/lines"
            android:textSize="14sp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/createdIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hamburger"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/locationsRv"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_dimension_characters"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear4">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>